--- a/lib/assets/javascripts/histogram/index.html
+++ b/lib/assets/javascripts/histogram/index.html
@@ -12,6 +12,7 @@
 	<canvas width="800" height="400" id="canvas" style="border:0px solid black"></canvas>
 <center>
 	<script type="text/javascript" charset="utf-8">
+    colors = {	"a": "#aaaaaa", "b": "#123456", "c": "#81A18A", "d": "#A19191" }
 		data = [{value: "a", id: "0"},{value: "a", id: "1"},{value: "a", id: "2"},{value: "a", id: "3"},{value: "a", id: "4"},{value: "a", id: "5"},{value: "a", id: "6"},{value: "b", id: "7"},{value: "b", id: "8"},{value: "b", id: "9"}]
 		start_histogram(document.getElementById("canvas"),data)
 	</script>
